# typescript-compiler

./: .gitignore  CMakeLists.txt  CMakeUtils.txt
.github/workflows/: build.yaml
src/libtypescript/: CMakeLists.txt
src/libtypescript/src/: check.cpp
src/ts-cli/: CMakeLists.txt
src/ts-cli/src/: main.cpp
