cmake_minimum_required(VERSION 3.28.1)
project(ts-compiler VERSION 0.0.1 LANGUAGES C CXX)
mark_as_advanced(CMAKE_MAKE_PROGRAM)
include(GNUInstallDirs)
include(CMakePrintHelpers)
include(FetchContent)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(THREADS_PREFER_PTHREAD_FLAG ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_compile_options(-fexperimental-library)

if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
    set(IS_ROOT_PROJECT ON)
else()
    set(IS_ROOT_PROJECT OFF)
endif()

option(TS_COMPILER_BUILD_CLI "build cli" ${IS_ROOT_PROJECT})

include("${CMAKE_CURRENT_SOURCE_DIR}/CMakeUtils.txt")
include("${CMAKE_CURRENT_SOURCE_DIR}/vendor/rapidjson.cmake")
add_subdirectory("src/libtypescript")
if (TS_COMPILER_BUILD_CLI)
    add_subdirectory("src/ts-cli")
endif()
